# AgentTrajectoryTracer

./: .gitignore  README.md  example.py  example_claude_agent_sdk.py  example_mini_swe_agent.py  pyproject.toml
agent_trajectory_tracer/: __init__.py  claude_agent_sdk_wrapper.py  exporter.py  mini_swe_agent_wrapper.py  openai_wrapper.py  otel_adapter.py  schemas.py  tracer.py
agent_trajectory_tracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vscode-extension/: README.md  extension.js  package-lock.json  package.json
