[project]
name = "agent-trajectory-tracer"
version = "0.1.0"
description = "Local file-backed AgentTrajectory tracer distilled from Langfuse trace and observation concepts."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
claude = [
    "claude-agent-sdk",
    "openinference-instrumentation-claude-agent-sdk",
    "opentelemetry-api",
    "opentelemetry-sdk",
]
swe = [
    "mini-swe-agent",
]

[tool.setuptools.packages.find]
include = ["agent_trajectory_tracer*"]
